# nitro-launcher

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/account-manager/: Cargo.toml
crates/account-manager/src/: account_types.rs  lib.rs  microsoft_auth_properties.rs
crates/account-manager/tests/: microsoft.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  duration.rs  lib.rs
crates/core/src/instance/: manager.rs  mod.rs
crates/core/src/java/: mod.rs
crates/fabric/: Cargo.toml
crates/java-utils/: Cargo.toml  build.rs
crates/java-utils/java/: build.gradle.kts  settings.gradle.kts
crates/java-utils/java/src/main/java/dev/kingtux/jur/: Main.java
crates/java-utils/src/: lib.rs
crates/modrinth/: Cargo.toml
crates/packwiz-rs/: Cargo.toml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/log/: debug.json
src-tauri/src/: main.rs  utils.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/auth/microsoft/: mod.rs
src-tauri/src/configuration/: account.rs
src-tauri/src/error/: mod.rs
src-tauri/src/instance/: mod.rs
src-tauri/src/minecraft/: error.rs  mod.rs  structs.rs
src-tauri/src/utils/: mod.rs  resources.rs
src/components/: HelloWorld.vue
src/components/nav/: SideBar.vue
src/css/: index.css
src/router/: index.ts
