[workspace]
members = ["src-tauri/", "crates/*"]
resolver = "2"


[workspace.package]
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
edition = "2021"
version = "0.0.1"
license = "Apache-2.0"
repository = "https://github.com/wyatt-herkamp/nitro-launcher"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
minecraft-rs = { path = "../minecraft.rs" }
nl-account-manager = { path = "crates/account-manager" }
thiserror = "1"
toml = "0.8"
semver = { version = "1.0.23", features = ["serde"] }
current_semver = "0.1.1"
once_cell = "1.8.0"
derive_more = { version = "=1.0.0-beta.6", features = ["from"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
pretty_assertions = "1.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
parking_lot = "0.12"
[workspace.lints.rust]
missing_debug_implementations = "warn"
async_fn_in_trait = "allow"