[package]
name = "nitro_launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["Wyatt J Herkamp <wherkamp@kingtux.me>"]
license = "MIT"
repository = ""
default-run = "nitro_launcher"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.1", features = [] }

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { version = "1.0.0-rc.2", features = ["api-all"] }
thiserror = "1.0.30"
log = "0.4.14"

[dependencies.reqwest]
version = "0.11.8"
features = ["json"]
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
