[package]
name = "nitro_launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["Wyatt J Herkamp <wherkamp@kingtux.me>"]
license = "MIT"
repository = ""
default-run = "nitro_launcher"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0.80"
serde = { version = "1.0.137", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
# Utils
thiserror = "1.0.31"
rust-embed = { version = "6.2.0", features = ["interpolate-folder-path"] }
dirs = "4.0.0"
# Logging
log = "0.4.14"
#nitro_log = { git = "https://github.com/wherkamp/nitro_log", features = ["time", "colors"] }
uuid = {version="1.0.0", features= ["serde","v4"] }
rss = "2.0.0"
# Due to requirements inside Microsoft Auth I will need to spin up an HTTP server for this to work. Once
# Once https://github.com/tauri-apps/tauri/issues/323 is completed we can drop this
tiny_http = "0.10.0"
[dependencies.reqwest]
version = "0.11.10"
features = ["json"]
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
