[package]
name = "nl-core"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
parking_lot.workspace = true
nl-java-utils.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
tracing.workspace = true
